UI developement started and added mysql as database and h2 is made as test database

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Card Creator</title>
 </head>
 <body>
-    <h3>This is just some things that you should know</h3>
-    <a href="./card.html">Cards</a>
+    <div class="loginForm">
+        <form action="LoginProcess" method="post">
+	        <fieldset>
+	            <input type="email" placeholder="Email">
+	            <input type="password" minlength="8" placeholder="Password">
+	            <button type="submit">Log In</button>	             
+	        </fieldset>
+	        <fieldset>
+	        	<button class="singUp">Sign Up</button>
+	        </fieldset>
+        </form>
+    </div>
 </body>
 </html>
