--- a/src/main/webapp/homepage.html
+++ b/src/main/webapp/homepage.html
@@ -14,8 +14,9 @@
                 <header><h2>TODO</h2></header>
             </div>
             <div class="container2">
-                <header><h2>In Progress</h2></h2></header>
-               <!--  <div class="card">
+                <header><h2>In Progress</h2></header>
+                <!--  
+                <div class="card">
                     <p class="card-title"><span class="title-heading">Title:</span>SomeTitle</p>
                     <p class="card-assigned"><span class="assigned-heading">Assigned To: </span>SomePerson</p>
                     <p class="card-created"><span class="created-heading">Created By: </span>SomeOtherPerson</p>
@@ -24,11 +25,13 @@
                     <p class="card-title"><span class="title-heading">Title:</span>SomeTitle</p>
                     <p class="card-assigned"><span class="assigned-heading">Assigned To: </span>SomePerson</p>
                     <p class="card-created"><span class="created-heading">Created By: </span>SomeOtherPerson</p>
-                </div>-->
+                </div>
+                -->
             </div>
             <div class="container3">
-                <header><h2>Done</h2></h2></header>
-                <!--<div class="card">
+                <header><h2>Done</h2></header>
+                <!--
+                <div class="card">
                     <p class="card-title"><span class="title-heading">Title:</span>SomeTitle</p>
                     <p class="card-assigned"><span class="assigned-heading">Assigned To: </span>SomePerson</p>
                     <p class="card-created"><span class="created-heading">Created By: </span>SomeOtherPerson</p>
@@ -37,7 +40,8 @@
                     <p class="card-title"><span class="title-heading">Title:</span>SomeTitle</p>
                     <p class="card-assigned"><span class="assigned-heading">Assigned To: </span>SomePerson</p>
                     <p class="card-created"><span class="created-heading">Created By: </span>SomeOtherPerson</p>
-                </div> -->
+                </div>
+                -->
             </div>
         </div>
         
